commit to merge with master

--- a/src/app/app-navbar/app-navbar.html
+++ b/src/app/app-navbar/app-navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="nav-brand">
-    <h2>💰 Gestionnaire de Transactions</h2>
+    <h2> 💸 MyPlan</h2>
   </div>
   <div class="nav-links">
     <button
